[MODINVOICE-585] Fixed code smells